# EHNN-CRISPR-OffTarget-Prediction

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  EHNN_Complete_Pipeline.py  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Final_Results/: full_results_EHNN.csv  lineplot.py
Final_Results/tables/: Table 1 Selected Related Off-Target Prediction Models.xlsx  Table 2 Input and Output Tensor Shapes for EHNN Branches.xlsx  Table 3 Public Off-Target Datasets Used in This Study.xlsx  Table 4 EHNN Performance Across All Benchmark Datasets.xlsx  Table 5 Hold-Out Performance (20% Test) Across Datasets.xlsx  Table 6 Ablation Study of the EHNN Model.xlsx  Table 7 ROC-AUC Performance Comparison Between EHNN and Recent State-of-the-Art Models.xlsx  Table 8 Real CPU Training Times Measured.xlsx
ehnn/: __init__.py  cli.py  config.py  encoding.py  features.py  model.py  normalize.py  plots.py  train.py  utils.py
tests/: test_encoding.py  test_features.py
